a bunch of changes

--- a/_posts/2023-09-10-Trails.md
+++ b/_posts/2023-09-10-Trails.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title:  "Trails"
-tags: Sketch Julia
+tags: Sketch Julia Generative
+published: false
 ---
 # Notes
 - Add link to repo on Github
